main page english version + switch language button added

--- a/src/main.html
+++ b/src/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -75,9 +75,8 @@
                 </div>
             </div>
         </div>
-        <div class="lang-label text-xs" style="display: none;">
-            <div class="lang-label__lang">UA</div>
-            <div class="lang-label__lang">ENG</div>
+        <div class="lang-label text-xs">
+            <a href="main_eng.html">ENG</a>
         </div>
     </main>
 
