added english search & tickets pages + some adjustments

--- a/src/search.html
+++ b/src/search.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="lang-label text-xs">
-            <a href="main_eng.html">ENG</a>
+            <a href="search_eng.html">ENG</a>
         </div>
     </main>
 
