--- a/src/search_eng.html
+++ b/src/search_eng.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Main Page</title>
+    <title>Search</title>
 </head>
 <body>
     <header class="header">
@@ -42,10 +42,10 @@
                     </ul>
                 </div>
                 <div class="nav__wrapper text-m">
-                    <a href="main_eng.html" class="button button__header button_selected">Main</a>
+                    <a href="main_eng.html" class="button button__header">Main</a>
                     <a href="tickets_eng.html" class="button button__header">Tickets</a>
                     <img class="nav__triangle" src="img/header/triangle.png"></img>
-                    <a href="search_eng.html" class="button button__header">Search</a>
+                    <a href="search_eng.html" class="button button__header button_selected">Search</a>
                     <a href="info_eng.html" class="button button__header">Info</a>
                 </div>
                 <div class="contacts">
@@ -59,24 +59,27 @@
     <main class="main">
         <div class="container">
             <div class="section__wrapper">
-                <div class="section section_premiere">
-                    <div class="section__title text-l">World premieres</div>
-                    <div class="section__posters">
-                        <div class="section__poster" id="poster1"></div>
-                        <div class="section__poster" id="poster2"></div>
+                <div class="section section_search">
+                    <div class="section__title text-l">Fill in movie name</div>
+                    <div class="input__search-wrapper">
+                        <input type="text" class="input input__search text-m">
+                        <img src="img/icons/search.svg">
                     </div>
-                </div>
-                <div class="section section_soon">
-                    <div class="section__title text-l">Coming soon</div>
-                    <div class="section__posters">
-                        <div class="section__poster" id="poster3"></div>
-                        <div class="section__poster" id="poster4"></div>
+                    <div class="section__films">
+                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster1.png')"></a>
+                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster2.png')"></a>
+                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster3.png')"></a>
+                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster4.png')"></a>
+                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster5.jpg')"></a>
+                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster6.jpg')"></a>
+                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster7.jpg')"></a>
+                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster8.jpg')"></a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="lang-label text-xs">
-            <a href="main.html">UA</a>
+            <a href="search.html">UA</a>
         </div>
     </main>
 
