--- a/src/main_eng.html
+++ b/src/main_eng.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="nav__wrapper text-m">
                     <a href="main_eng.html" class="button button__header button_selected">Main</a>
-                    <a href="tickets_eng.html" class="button button__header">Tickets</a>
+                    <a href="#" class="button button__header">Tickets</a>
                     <img class="nav__triangle" src="img/header/triangle.png"></img>
                     <a href="search_eng.html" class="button button__header">Search</a>
                     <a href="info_eng.html" class="button button__header">Info</a>
@@ -62,15 +62,15 @@
                 <div class="section section_premiere">
                     <div class="section__title text-l">World premieres</div>
                     <div class="section__posters">
-                        <div class="section__poster" id="poster1"></div>
-                        <div class="section__poster" id="poster2"></div>
+                        <a href="tickets.html" class="section__poster" id="poster1"></a>
+                        <a href="tickets.html" class="section__poster" id="poster2"></a>
                     </div>
                 </div>
                 <div class="section section_soon">
                     <div class="section__title text-l">Coming soon</div>
                     <div class="section__posters">
-                        <div class="section__poster" id="poster3"></div>
-                        <div class="section__poster" id="poster4"></div>
+                        <a href="tickets.html" class="section__poster" id="poster3"></a>
+                        <a href="tickets.html" class="section__poster" id="poster4"></a>
                     </div>
                 </div>
             </div>
