--- a/src/search.html
+++ b/src/search.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="nav__wrapper text-m">
                     <a href="main.html" class="button button__header">Головна</a>
-                    <a href="tickets.html" class="button button__header">Білети</a>
+                    <a href="#" class="button button__header">Білети</a>
                     <img class="nav__triangle" src="img/header/triangle.png"></img>
                     <a href="search.html" class="button button__header button_selected">Пошук</a>
                     <a href="info.html" class="button button__header">Інфо</a>
@@ -66,14 +66,14 @@
                         <img src="img/icons/search.svg">
                     </div>
                     <div class="section__films">
-                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster1.png')"></a>
-                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster2.png')"></a>
-                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster3.png')"></a>
-                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster4.png')"></a>
-                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster5.jpg')"></a>
-                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster6.jpg')"></a>
-                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster7.jpg')"></a>
-                        <a href="#" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster8.jpg')"></a>
+                        <a href="tickets.html" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster1.png')"></a>
+                        <a href="tickets.html" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster2.png')"></a>
+                        <a href="tickets.html" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster3.png')"></a>
+                        <a href="tickets.html" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster4.png')"></a>
+                        <a href="tickets.html" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster5.jpg')"></a>
+                        <a href="tickets.html" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster6.jpg')"></a>
+                        <a href="tickets.html" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster7.jpg')"></a>
+                        <a href="tickets.html" style="background-image: linear-gradient(to top, transparent 60%, rgba(250, 255, 0, .6) 80%, rgb(250, 255, 0) 100%), url('../img/posters/poster8.jpg')"></a>
                     </div>
                 </div>
             </div>
